# oustip

./: .aider.conf.yml  .continuerc.json  .cursorrules  .gitignore  .releaserc.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  README_FR.md  clippy.toml  rustfmt.toml
.ai/: MEMORY.md  README.md  generate.sh  sources.yaml
.ai/commands/: quick-reference.md
.ai/skills/: _TEMPLATE.yaml  inclusivity-reviewer.yaml  memory-keeper.yaml  project-assistant.yaml  rust-expert.yaml  security-reviewer.yaml  translator.yaml  workflow-orchestrator.yaml
.claude/agents/: inclusivity-reviewer.md  memory-keeper.md  project-assistant.md  rust-expert.md  security-reviewer.md  translator.md  workflow-orchestrator.md
.codex/agents/: inclusivity-reviewer.md  memory-keeper.md  project-assistant.md  rust-expert.md  security-reviewer.md  translator.md  workflow-orchestrator.md
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  integration-docker.yml  osv-scanner.yml  release.yml  rust-clippy.yml  version.yml
.opencode/agent/: inclusivity-reviewer.md  memory-keeper.md  project-assistant.md  rust-expert.md  security-reviewer.md  translator.md  workflow-orchestrator.md
benches/: aggregation.rs
docker/: Dockerfile  config.yaml  docker-compose.yaml
docs/: ARCHITECTURE.md  PRODUCTION_CHECKLIST.md  README.fr.md  README.md
i18n/: en.yaml  fr.yaml
ollama/: Modelfile.inclusivity-reviewer  Modelfile.memory-keeper  Modelfile.project-assistant  Modelfile.rust-expert  Modelfile.security-reviewer  Modelfile.translator  Modelfile.workflow-orchestrator  create-all.sh
src/: aggregator.rs  alerts.rs  cli.rs  cmd_abstraction.rs  config.rs  dns.rs  error.rs  fetcher.rs  fs_abstraction.rs  installer.rs  interface_stats.rs  interfaces.rs  lib.rs  lock.rs  main.rs  presets.rs  signal.rs  stats.rs  utils.rs  validation.rs
src/commands/: allowlist.rs  assume.rs  blocklist.rs  check.rs  disable.rs  enable.rs  health.rs  install.rs  interfaces.rs  ipv6.rs  mod.rs  presets.rs  report.rs  search.rs  stats.rs  status.rs  uninstall.rs  update.rs
src/commands/diagnose/: backend.rs  config.rs  connectivity.rs  functional.rs  mod.rs  output.rs  resilience.rs  runner.rs  smoke.rs
src/enforcer/: iptables.rs  mod.rs  nftables.rs
templates/: config.yaml  presets.yaml
tests/: Dockerfile.integration  integration.rs  robustness.rs
tests/fixtures/: minimal-config.yaml
tests/integration/scripts/: run-all.sh  test-check-ip.sh  test-disable-enable.sh  test-dry-run.sh  test-health.sh  test-help.sh  test-nftables-apply.sh  test-status.sh  test-version.sh
